--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
                     </p>
                 </div>
-                <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
+                <img width="464" height="479" src="./src/img/about/houseplant.png" alt="houseplant">
             </div>
         </section>
         <section id="service" class="service">
@@ -137,7 +137,7 @@
         <section class="prices">
             <div class="wrapper prices__wrapper">
                 <div class="prices__accordion">
-                    <h3>Prices</h3>
+                    <h2 class="prices__title">Prices</h2>
                     <div class="accordion">
                         <div class="accordion__container block-rounded">
                             <div class="accordion__label">
@@ -196,11 +196,11 @@
                     </div>
                 </div>
                 <div class="prices-contacts">
-                    <h3 class="prices-contacts__title">Our best 
-                        <strong class="strong_bold">
+                    <h2 class="prices__title prices-contacts__title">Our best 
+                        <strong>
                             gardeners
                         </strong> are ready to help you
-                    </h3>
+                    </h2>
                     <div class="prices-contacts__button">
                         <button class="button button_colored button_colored_bg-none">
                         Contact Us
@@ -214,83 +214,12 @@
         </section>
         <section class="contacts">
             <div class="wrapper contacts__wrapper">
-                <img width="400" height="496" src="./src/img/contacts/contact_woman 1.png" alt="contact_woman">
-                <h5>Contact us</h5>
-                <div class="contacts__select">
-                    <select name="sity" id="select">
-                        <option value="Canandaigua">Canandaigua, NY</option>
-                        <div class="select__container block-rounded">
-                            <address>
-                                <div class="contacts__label">Sity</div>
-                                <div>Canandaigua, NY</div>
-                                <div class="contacts__label">Phone</div>
-                                <div>
-                                    <a href="tel:+15853930001">
-                                        +1 585 393 0001
-                                    </a>
-                                </div>
-                                <div class="contacts__label">Office adress:</div>
-                                <div>151 Charlotte Street</div>
-                            </address>
-                            <button class="button contacts_button">
-                                        Call us
-                            </button>
-                        </div>
-                        <option value="New-York-City">New York City</option>
-                        <div class="select__container block-rounded">
-                            <address>
-                                <div class="contacts__label">Sity</div>
-                                <div>New York City</div>
-                                <div class="contacts__label">Phone</div>
-                                <div>
-                                    <a href="tel:+12124560002">
-                                        +1 212 456 0002
-                                    </a>
-                                </div>
-                                <div class="contacts__label">Office adress:</div>
-                                <div>9 East 91st Street</div>
-                            </address>
-                            <button class="button accordion_button">
-                                        Call us
-                            </button>
-                        </div>
-                        <option value="Yonkers">Yonkers, NY</option>
-                        <div class="select__container block-rounded">
-                            <address>
-                                <div class="contacts__label">Sity</div>
-                                <div>Yonkers, NY</div>
-                                <div class="contacts__label">Phone</div>
-                                <div>
-                                    <a href="tel:+19146780003">
-                                        +1 914 678 0003
-                                    </a>
-                                </div>
-                                <div class="contacts__label">Office adress:</div>
-                                <div>511 Warburton Ave</div>
-                            </address>
-                            <button class="button accordion_button">
-                                        Call us
-                            </button>
-                        </div>
-                        <option value="Sherrill">Sherrill, NY</option>
-                        <div class="select__container block-rounded">
-                            <address>
-                                <div class="contacts__label">Sity</div>
-                                <div>Sherrill, NY</div>
-                                <div class="contacts__label">Phone</div>
-                                <div>
-                                    <a href="tel:+13159080004">
-                                        +1 315 908 0004
-                                    </a>
-                                </div>
-                                <div class="contacts__label">Office adress:</div>
-                                <div>14 WEST Noyes BLVD</div>
-                            </address>
-                            <button class="button accordion_button">
-                                        Call us
-                            </button>
-                        </div>
-                    </select>
+                <img width="400" height="496" src="./src/img/contacts/contact_woman.png" alt="contact_woman">
+                <h2 class="contacts__title">Contact us</h2>
+                <div class="drop-down">
+                    <div class="drop__label">
+                        <span class="drop__title">Sity</span><img class="drop_img" src="./src/img/icons/drop_btn_unactive.svg" alt="btn_closed">
+                    </div>
                 </div>
             </div>
         </section>
