--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <img src="./src/img/logo_vector.svg" alt="logo">
                 </a>
             </div>
-            <span class="hamburger">
+            <div class="hamburger">
                     <span class="hamburger__line1"></span>
                     <span class="hamburger__line2"></span>
-                </span>
+            </div>
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li class="navigation__item">
