--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                     <div class="accordion">
                         <div class="accordion__container block-rounded">
                             <div class="accordion__label">
-                                <span class="accordion__title">Basics</span><img class="accordion_img" src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                                <span class="accordion__title">Basics</span>
+                                <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
                                 <hr>
@@ -162,7 +163,8 @@
                         </div>
                         <div class="accordion__container block-rounded">
                             <div class="accordion__label">
-                                <span class="accordion__title">Standard</span><img src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                                <span class="accordion__title">Standard</span>
+                                <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
                                 <hr>
@@ -180,7 +182,8 @@
                     </div>
                     <div class="accordion__container block-rounded">
                             <div class="accordion__label">
-                                <span class="accordion__title">Pro care</span><img src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                                <span class="accordion__title">Pro care</span>
+                                <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
                                 <hr>
