--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/sass/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.svg">
     <title>Plants</title>
 </head>
 <body>
@@ -220,7 +220,7 @@
         </section>
         <section id="contacts" class="contacts">
             <div class="wrapper contacts__wrapper">
-                <img width="400" height="496" src="./src/img/contacts/contact_woman.png" alt="contact_woman">
+                <img class="contacts_img" width="400" height="496" src="./src/img/contacts/contact_woman.png" alt="contact_woman">
                 <h2 class="contacts__title">Contact us</h2>
                 <div class="drop-down">
                     <div class="drop__label">
