--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
                     <img src="./src/img/logo_vector.svg" alt="logo">
                 </a>
             </div>
-            <div class="hamburger" id="hamburger">
-                    <span class="hamburger__line1"></span>
-                    <span class="hamburger__line2"></span>
+            <div class="hamb" >
+                <div class="hamburger" id="hamb">
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                </div>
             </div>
+             
             <nav class="header__navigation">
                 <ul class="navigation" id="navigation">
                     <li class="navigation__item">
