--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <main class="main">
         <section id="welcome" class="welcome">
             <div class="wrapper welcome__wrapper">
-                <img class="welcome__img" width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
+                <div class="welcome__img" >
+                    <img src="./src/img/welcome/leafs.png" alt="leafs">
+                </div>
                 <div class="welcome__body">
                     <h1 class="welcome__title">
                         We grow <strong class="strong_bold strong_shadow">plants</strong> and give you oxygen
@@ -88,18 +90,23 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
                     </p>
                 </div>
-                <img class="about__img" width="464" height="479" src="./src/img/about/houseplant.png" alt="houseplant">
+                <div class="about__img">
+                    <img src="./src/img/about/houseplant.png" alt="houseplant">
+                </div>
             </div>
         </section>
         <section id="service" class="service">
             <div class="wrapper service__wrapper">
-                <h2 class="servise__title">Service and our projects</h2>
+                <div class="service__header">
+                    <h2 class="servise__title">Service and our projects</h2>
                 <div class="service__buttons">
                     <button class="button button_colored">Gardens</button>
                     <button class="button button_colored">Lawn</button>
                     <button class="button button_colored">Planting</button>
                 </div>
-                <article class="card card-1">
+                </div>
+                <div class="service__cards">
+                    <article class="card card-1">
                         <div class="card-image-1"></div>
                         <h4 class="card__title">Garden care</h4>
                         <div class="card__subtitle">
@@ -141,6 +148,7 @@
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
+                </div>
             </div>
         </section>
         <section id="price" class="prices">
@@ -226,7 +234,9 @@
         </section>
         <section id="contacts" class="contacts">
             <div class="wrapper contacts__wrapper">
-                <img class="contacts_img" width="400" height="496" src="./src/img/contacts/contact_woman.png" alt="contact_woman">
+                <div class="contacts_img">
+                    <img src="./src/img/contacts/contact_woman.png" alt="contact_woman">
+                </div>
                 <h2 class="contacts__title">Contact us</h2>
                 <div class="drop-down">
                     <div class="drop__label">
